--- a/style.css
+++ b/style.css
@@ -210,8 +210,9 @@ main {
 
    main {
       width: 92%;
-      height: 75%;
+      height: 82%;
       justify-content: space-between;
+      align-items: center;
       flex-direction: column;
    }
 
@@ -258,16 +259,172 @@ main {
          background-size: contain;
 
          &:hover {
-            scale: 58%;
+            scale: 105%;
          }
       }
 
    }
 }
 
-@media (min-width: 481px) and (max-width: 600px) {}
+@media (min-width: 481px) and (max-width: 600px) {
+   nav {
+      width: 92%;
+      height: 12%;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
-@media (min-width: 601px) and (max-width: 768px) {}
+      #logo {
+         scale: 80%;
+      }
+
+      #links,
+      #contact {
+         display: none;
+      }
+
+      #menu {
+         display: block;
+      }
+   }
+
+   main {
+      width: 92%;
+      height: 82%;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: column;
+   }
+
+   #leftContainer {
+      order: 2;
+      width: 100%;
+      height: 45%;
+      gap: 50px;
+
+      #textContainer {
+         width: 100%;
+         gap: 20px;
+
+         #upperText {
+            font-size: 14px;
+         }
+
+         #heading {
+            width: 60%;
+            font-size: 28px;
+         }
+
+         #subheading {
+            width: 70%;
+            font-size: 14px;
+         }
+      }
+
+      #button {
+         font-size: 12px;
+         border-radius: 8px;
+         padding: 8px 20px;
+      }
+   }
+
+   #rightContainer {
+      order: 1;
+      width: 92%;
+      height: 45%;
+
+      img {
+         width: 100%;
+         height: auto;
+         background-size: contain;
+
+         &:hover {
+            scale: 105%;
+         }
+      }
+   }
+}
+
+@media (min-width: 601px) and (max-width: 768px) {
+   nav {
+      width: 85%;
+      height: 12%;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      #logo {
+         scale: 90%;
+      }
+
+      #links,
+      #contact {
+         display: none;
+      }
+
+      #menu {
+         display: block;
+      }
+   }
+
+   main {
+      width: 85%;
+      height: 82%;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: column;
+   }
+
+   #leftContainer {
+      order: 2;
+      width: 100%;
+      height: 45%;
+      gap: 56px;
+
+      #textContainer {
+         width: 100%;
+         gap: 22px;
+
+         #upperText {
+            font-size: 14px;
+         }
+
+         #heading {
+            width: 60%;
+            font-size: 32px;
+         }
+
+         #subheading {
+            width: 65%;
+            font-size: 16px;
+         }
+      }
+
+      #button {
+         font-size: 14px;
+         border-radius: 8px;
+         padding: 10px 22px;
+      }
+   }
+
+   #rightContainer {
+      order: 1;
+      width: 100%;
+      height: 45%;
+
+      img {
+         width: 80%;
+         height: auto;
+         background-size: contain;
+
+         &:hover {
+            scale: 105%;
+         }
+      }
+   }
+}
 
 @media (min-width: 769px) and (max-width: 992px) {}
 
